# protx-dashboard

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker_repo.var  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/workflows/: main.yml
conf/cms/: secrets.sample.py  settings_local.py
conf/nginx/: assets.location.conf  data.location.conf  nginx.conf  protx.location.conf
conf/portal/: settings_custom.py  settings_default.py
protx/: api.py  app.py  decorators.py  log.py
protx-client/: .eslintrc.json  .prettierignore  .stylelintrc.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
protx-client/src/: App.css  App.jsx  main.tsx
protx-client/src/components/ProTx/: index.js
protx-client/src/components/ProTx/components/charts/: AnalyticsDetails.jsx  AnalyticsPredictiveTable.jsx  AnalyticsPredictiveTable.module.scss  AnalyticsStateDistribution.jsx  AnalyticsStateDistribution.module.scss  ChartInstructions.css  ChartInstructions.jsx  DemographicFeatureNote.jsx  DemographicFeatureNote.module.scss  DemographicsDetails.jsx  FigureCaption.css  FigureCaption.jsx  FigureCaption.test.js  MainChart.css  (+10 more)
protx-client/src/redux/reducers/: configuration.js  index.js  protx.reducers.js
protx-client/src/redux/sagas/: index.js  protx.sagas.js
protx-client/src/utils/: fetchUtil.js
protx/conf/: styles.py
protx/scripts/: run_queries.py
protx/templates/: dash.html
protx/tests/: api_test.py  app_test.py  conftest.py
protx/utils/: analytics.py  db.py  demographics.py  maltreatment.py  plotly_figures.py  resources.py
(+31 files in other folders)
