[tool.poetry]
name = "protx-dashboard"
version = "0.1.0"
description = "Cooks Dashboard"
authors = ["TACC-WMA <wma-portals@tacc.utexas.edu>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
requests = "^2.29.0"
gevent = "^21.12.0"
numpy = "^1.23.2"
SQLAlchemy = "^1.4.24"
pandas = "^1.3.3"
plotly = "^5.12.0"
diskcache = "^5.3.0"
Flask = "^2.2.5"
flask-restx = "^1.1.0"
gunicorn = "^20.1.0"
geopandas = "^0.10.2"
psycopg2-binary = "^2.9.3"
Werkzeug = "==2.2.3"
setuptools = "^66.1.1"
shapely = "1.8.5"
urllib3 = "<2"

[tool.poetry.dev-dependencies]
pytest-mock = "^3.1.1"
pytest = "^5.4.3"
pytest-cov = "^2.9.0"
flake8 = "^3.8.2"
coverage = "^5.1"
requests-mock = "^1.8.0"

[build-system]
requires = ["poetry>=1.0.0"]
build-backend = "poetry.masonry.api"
